# restG4

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cxx  restG4.cc  restG4.cxx
.github/: CODEOWNERS  pr-badge.yml  pull_request_template.md
.github/workflows/: frameworkPR.yml  frameworkValidation.yml  validation.yml
examples/: README.md
examples/01.NLDBD/: NLDBD.rml  NLDBD2.rml  README.md  Validate.C
examples/01.NLDBD/geometry/: myGeometryTemplate.gdml  mySetupTemplate.gdml  mySetupTemplate2.gdml  rest.xml
examples/02.TREXDM/: FullChainFromReadout.rml  g4Analysis.rml
examples/02.TREXDM/geometry/: README.md  geometry.gdml  setup.gdml
examples/03.Fluorescence/: .electron.rml.swp  README.md  Validate.C  electron.rml  g4Analysis.rml  gamma.rml
examples/03.Fluorescence/geometry/: geometry.gdml  setup.gdml
examples/04.MuonScan/: CosmicMuons.rml  CosmicMuonsFromCircle.rml  CosmicMuonsFromWall.rml  Muon.rml  MuonsFromPoint.rml  Run00111_restG4_MuonsFromPoint_jgalan.root  Validate.C  ValidateCircle.C  ValidateCosmicMuons.C  ValidateCosmicMuonsFromCircle.C  ValidateCosmicMuonsFromWall.C  ValidateMuonsFromPoint.C  ValidateWall.C  geometry.gdml  setup.gdml
examples/04.MuonScan/geometry/: setup.gdml
examples/05.PandaXIII/: README.md  Validate.C  Xe136bb0n.rml
examples/05.PandaXIII/geometry/: AcrylicPart.gdml  CopperRings.gdml  LeadShelding.gdml  OtherXeTMAGas.gdml  Resistance.gdml  Th232_SS_01.rml  XeTMAGas_new.gdml
examples/06.IonRecoils/: README.md  RecoilMFP.C  Validate.C  recoils.rml
examples/06.IonRecoils/geometry/: geometry.gdml  setup.gdml
examples/07.FullChainDecay/: README.md  Validate.C  fullChain.rml  singleDecay.rml
examples/07.FullChainDecay/geometry/: geometry.gdml  rest.xml  setup.gdml
examples/08.Alphas/: README.md  Validate.C  alphas.rml  analysis.rml  plots.rml
examples/08.Alphas/geometry/: geometry.gdml  setup.gdml
examples/08.BabyIAXO/: CosmicMuons.rml  CosmicNeutrons.rml  Validate.C
examples/08.BabyIAXO/geometry/: BabyIAXO-NoVetos.gdml  IAXO-D1-Default.gdml
examples/08.RestGenerator/: Pb210FromGenerator.rml  Pb210FromShielding.root  README.md
examples/08.RestGenerator/geometry/: BabyIAXO.gdml  materials.xml
examples/09.Pb210_Shield/: Pb210.rml  README.md  Validate.C
examples/09.Pb210_Shield/geometry/: geometry.gdml  setup.gdml
examples/10.Geometries/: Assembly.rml  Validate.C
examples/10.Geometries/geometry/: geometry.gdml
examples/10.Geometries/geometry/assemblyDepthOne/: geometry.gdml  setup.gdml
examples/10.Geometries/geometry/noAssembly/: geometry.gdml  setup.gdml
examples/11.Xrays/: Fe55.rml  GetQE.C  README.md  Validate.C  ValidateFe55.C  analysis.rml  xrays.rml
examples/11.Xrays/geometry/: setup.gdml
examples/12.Generators/: CosineSquaredCircle.rml  CosmicGenerator.rml  CosmicGeneratorNew.rml  CosmicGeneratorNewReference.rml  CosmicMuons.rml  CosmicMuonsEnergyAngularCorrelated.rml  CryGenerator.rml  EnergyAndAngularRange.rml  IsotropicWithRange.rml  SinCos2Circle.rml  Validate.C  ValidateCorrelated.C  ValidateCosineSquared.C  ValidateCosmic.C  ValidateCosmicGenerator.C  ValidateCosmicMuonsEnergyAngularCorrelated.C  ValidateEnergyAndAngularRange.C  ValidateIsotropicWithRange.C
examples/12.Generators/CosmicGeneratorBenchmarks/: README.md  cosmicGeneratorIAXO.rml  cosmicGeneratorSimple.rml  cosmicGeneratorSphere.rml  diskIAXO.rml  diskSimple.rml  diskSphere.rml  results.py
examples/12.Generators/geometry/: geometry.gdml  setup.gdml
examples/12.Generators/geometry-sphere/: geometry.gdml  setup.gdml
examples/13.IAXO/: GammaBiasing.rml  Muons.rml  Neutrons.rml  SignalXRayPhotons.rml  Validate.C
examples/13.IAXO/geometry/: setup.gdml
examples/14.DetectorResponse/: DetectorResponse.rml  README.md  ValidateResponse.C  analysis.rml  geometry.gdml  launchResponse.sh
examples/14.DetectorResponse/geometry/: geometry.gdml  setup.gdml
examples/15.DecaySpectra/: GenerateTree.C  GenerateTrees.C  TreeToHistogram.C  simulation.rml
examples/15.DecaySpectra/geometry/: setup.gdml
examples/15.GammaBiasing/: ShieldingBiasing.rml
examples/15.GammaBiasing/geometry/: setup.gdml
examples/v2.1.7/: replaceRMLVars.py
examples/v2.1.7/pandaXIII/: generateExamples.sh
examples/v2.1.7/pandaXIII/biasing/: externalTh232.rml  externalU238.rml
examples/v2.1.7/pandaXIII/geometry/resistive/: pandaXIII_Geometry.gdml  pandaXIII_Setup.gdml
examples/v2.1.7/pandaXIII/geometry/traditional/: pandaXIII_Geometry.gdml  pandaXIII_Setup_WT12m.gdml  pandaXIII_Setup_WT6m.gdml
examples/v2.1.7/pandaXIII/templates/: biasedIsotopeFromVirtualBox.rml  decay0FromVolume.rml  isotopeFromPoint.rml  isotopeFromVCylinder.rml  isotopeFromVolume.rml
include/: ActionInitialization.h  Application.h  Biasing.h  CommandLineSetup.h  DetectorConstruction.h  DetectorConstruction.hh  EventAction.h  EventAction.hh  GammaBiasingOperation.h  GammaBiasingOperator.h  GlobalManager.h  OutputManager.h  Particles.h  PhysicsList.h  PhysicsList.hh  PrimaryGeneratorAction.h  PrimaryGeneratorAction.hh  RunAction.h  RunAction.hh  SensitiveDetector.h  SimulationManager.h  StackingAction.h  SteppingAction.h  SteppingAction.hh  SteppingVerbose.h  TrackingAction.h  TrackingAction.hh
mac/: visualtrack.mac
src/: ActionInitialization.cxx  Application.cxx  Biasing.cxx  CommandLineSetup.cxx  DataModel.cxx  DetectorConstruction.cc  DetectorConstruction.cxx  EventAction.cc  EventAction.cxx  GammaBiasingOperation.cxx  GammaBiasingOperator.cxx  GlobalManager.cxx  OutputManager.cxx  Particles.cc  Particles.cxx  PhysicsList.cc  PhysicsList.cxx  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cxx  RunAction.cc  RunAction.cxx  SensitiveDetector.cxx  SimulationManager.cxx  StackingAction.cxx  SteppingAction.cc  SteppingAction.cxx  SteppingVerbose.cxx  TRestGeant4DataEvent.cxx  TRestGeant4DataSteps.cxx  TRestGeant4DataTrack.cxx  TRestGeant4Event.cxx  TRestGeant4Hits.cxx  TRestGeant4Track.cxx  TrackingAction.cc  TrackingAction.cxx
test/src/: application.cxx  examples.cxx
